--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap 3 - Создание адаптивной галереи изображений с помощью сетки</title>
     <!-- Bootstrap CSS -->
-    <link href="/examples/vendors/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://itchief.ru/examples/vendors/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- fancyBox JS -->
-    <link href="/examples/vendors/fancybox/jquery.fancybox.min.css" rel="stylesheet">
+    <link href="https://itchief.ru/examples/vendors/fancybox/jquery.fancybox.min.css" rel="stylesheet">
     <style>
         .thumb img {
             -webkit-filter: grayscale(0);
@@ -35,103 +35,103 @@
     <h1 class="h2 text-center">Bootstrap 3 - Создание адаптивной галереи изображений с помощью сетки</h1>
     <div class="row">
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_01.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_01.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_01.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_01.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_02.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_02.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_02.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_02.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_03.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_03.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_03.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_03.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_04.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_04.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_04.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_04.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_05.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_05.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_05.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_05.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_06.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_06.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_06.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_06.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_07.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_07.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_07.jpg">
+                <img class="img-responsive" src="https://itchief.ruexamples/images/for-image-gallery/img_07.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_08.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_08.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_08.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_08.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_09.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_09.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_09.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_09.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_10.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_10.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_10.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_10.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_11.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_11.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_11.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_11.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_12.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_12.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_12.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_12.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_13.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_13.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_13.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_13.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_14.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_14.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_14.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_14.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_15.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_15.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_15.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_15.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_16.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_16.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_16.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_16.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_17.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_17.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_17.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_17.jpg" alt="">
             </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-            <a data-fancybox="gallery" href="/examples/images/for-image-gallery/img_18.jpg">
-                <img class="img-responsive" src="/examples/images/for-image-gallery/img_18.jpg" alt="">
+            <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_18.jpg">
+                <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_18.jpg" alt="">
             </a>
         </div>
     </div>
 </div>
 
 <!-- jQuery -->
-<script src="/examples/vendors/jquery/jquery-3.2.1.min.js"></script>
+<script src="https://itchief.ru/examples/vendors/jquery/jquery-3.2.1.min.js"></script>
 <!-- Bootstrap JS -->
-<script src="/examples/vendors/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+<script src="https://itchief.ru/examples/vendors/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 <!-- fancyBox JS -->
-<script src="/examples/vendors/fancybox/jquery.fancybox.min.js"></script>
+<script src="https://itchief.ru/examples/vendors/fancybox/jquery.fancybox.min.js"></script>
 </body>
 </html>			
