--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap 3 - Создание адаптивной галереи изображений с помощью сетки</title>
     <!-- Bootstrap CSS -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://itchief.ru/examples/vendors/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- fancyBox JS -->
-    <link href="./fancybox/jquery.fancybox-1.3.4.css" rel="stylesheet">
+    <link href="https://itchief.ru/examples/vendors/fancybox/jquery.fancybox.min.css" rel="stylesheet">
     <style>
         .thumb img {
             -webkit-filter: grayscale(0);
@@ -128,10 +128,10 @@
 </div>
 
 <!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://itchief.ru/examples/vendors/jquery/jquery-3.2.1.min.js"></script>
 <!-- Bootstrap JS -->
-<script src="./js/bootstrap.min.js"></script>
+<script src="https://itchief.ru/examples/vendors/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 <!-- fancyBox JS -->
-<script src="./fancybox/jquery.fancybox-1.3.4.js"></script>
+<script src="https://itchief.ru/examples/vendors/fancybox/jquery.fancybox.min.js"></script>
 </body>
 </html>			
