--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://itchief.ru/examples/vendors/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- fancyBox JS -->
-    <link href="https://itchief.ru/examples/vendors/fancybox/jquery.fancybox.min.css" rel="stylesheet">
+    <link href="./fancybox/jquery.fancybox.min.css" rel="stylesheet">
     <style>
         .thumb img {
             -webkit-filter: grayscale(0);
@@ -128,10 +128,10 @@
 </div>
 
 <!-- jQuery -->
-<script src="https://itchief.ru/examples/vendors/jquery/jquery-3.2.1.min.js"></script>
+<script src="./js/jquery-3.2.1.min.js"></script>
 <!-- Bootstrap JS -->
 <script src="https://itchief.ru/examples/vendors/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 <!-- fancyBox JS -->
-<script src="https://itchief.ru/examples/vendors/fancybox/jquery.fancybox.min.js"></script>
+<script src="./fancybox/jquery.fancybox.min.js"></script>
 </body>
 </html>			
