--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap 3 - Создание адаптивной галереи изображений с помощью сетки</title>
     <!-- Bootstrap CSS -->
-    <link href="https://itchief.ru/examples/vendors/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
     <!-- fancyBox JS -->
     <link href="./fancybox/jquery.fancybox.min.css" rel="stylesheet">
     <style>
@@ -130,7 +130,7 @@
 <!-- jQuery -->
 <script src="./js/jquery-3.2.1.min.js"></script>
 <!-- Bootstrap JS -->
-<script src="https://itchief.ru/examples/vendors/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
 <!-- fancyBox JS -->
 <script src="./fancybox/jquery.fancybox.min.js"></script>
 </body>
