--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://itchief.ru/examples/vendors/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- fancyBox JS -->
     <link href="./fancybox/jquery.fancybox.min.css" rel="stylesheet">
+	
+	<link href="./add.css" rel="stylesheet">
+	
     <style>
         .thumb img {
             -webkit-filter: grayscale(0);
@@ -221,5 +224,7 @@
 <script src="https://itchief.ru/examples/vendors/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 <!-- fancyBox JS -->
 <script src="./fancybox/jquery.fancybox.min.js"></script>
+
+<script src="./add.js"></script>
 </body>
 </html>			
