--- a/index1.html
+++ b/index1.html
@@ -149,7 +149,7 @@
                 <hr class="mb-5">
 
                 <section >
-                    <p style="height: 5000px;">Контент...</p>
+                    <p>Контент...</p>
                 </section>
             </div>
         </div>
