--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="./fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/post.css">
-    <title>Hello, world!</title>
+    <title>Alexei's Postcrads</title>
 
 
 </head>
