--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 <body>
 
-
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4 col-lg-3 navbar-container bg-light">
@@ -30,8 +29,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <!-- Вертикальное меню -->
-                    <ul class="nav flex-column">
-                        <li class="nav-item"><a class="nav-link" href="#"><img src="flag/ar.png" alt="Argentina">Argentina</a></li>
+                    
+					<ul class="nav flex-column">
+                        <li class="nav-item"><a class="nav-link" href="./country/Argentina.html"><img src="flag/ar.png" alt="Argentina">Argentina</a></li>
                         <li class="nav-item"><a class="nav-link" href="#"><img src="flag/am.png" alt="Armenia">Armenia</a></li>
                         <li class="nav-item"><a class="nav-link" href="#"><img src="flag/au.png" alt="Australia">Australia</a></li>
                         <li class="nav-item"><a class="nav-link" href="#"><img src="flag/at.png" alt="Austria">Austria</a></li>
@@ -113,7 +113,7 @@
                         <li class="nav-item"><a class="nav-link" href="#"><img src="flag/va.png" alt="Vatican">Vatican</a></li>
                         <li class="nav-item"><a class="nav-link" href="#"><img src="flag/ve.png" alt="Venezuela">Venezuela</a></li>
                         <li class="nav-item"><a class="nav-link" href="#"><img src="flag/ax.png" alt="Åland Islands">Åland Islands</a></li>
-                    </ul>
+                    </ul> 
                 </div>
             </nav>
         </div>
@@ -155,5 +155,7 @@
 <!-- fancyBox JS -->
 <script src="./fancybox/jquery.fancybox.min.js"></script>
 <script src="./fancybox/jquery.fancybox.protect.js"></script>
+
+
 </body>
 </html>
