--- a/index.html
+++ b/index.html
@@ -118,27 +118,15 @@
             </nav>
         </div>
         <div class="col-md-8 col-lg-9 content-container">
+		<h1>  </h1>
           <div class="row">
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_01.jpg">
-                    <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_01.jpg" alt="">
+            <div class="col-md-6 col-sm-6 col-xs-12 thumb-fl">
+                <a href="./country/Argentina.html ">
+                    <img class="img-responsive" src="http://flags.fmcdn.net/data/flags/w580/ar.png" alt="">
+					<div class="bottom-left-bg">Argentina</div>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_02.jpg">
-                    <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_02.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_03.jpg">
-                    <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_03.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="https://itchief.ru/examples/images/for-image-gallery/img_04.jpg" data-caption="This image has a simple caption">
-                    <img class="img-responsive" src="https://itchief.ru/examples/images/for-image-gallery/img_04.jpg" alt="">
-                </a>
-            </div>
+      
         </div>
     </div>
 </div>
